// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`constructor with schemaPath 1`] = `
Object {
  "properties": Object {
    "foo": Object {
      "type": "string",
    },
  },
  "type": "object",
}
`;

exports[`constructor with schemaPath 2`] = `
Object {
  "properties": Object {
    "foo": Object {
      "type": "string",
    },
  },
  "required": Array [
    "foo",
  ],
  "type": "object",
}
`;
